// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge Snapshot Tests should match snapshot for cancelled status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#EE5A6F",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#FFFFFF",
        },
        false,
      ]
    }
  >
    CANCELLED
  </Text>
</View>
`;

exports[`StatusBadge Snapshot Tests should match snapshot for delivered status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#10AC84",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#FFFFFF",
        },
        false,
      ]
    }
  >
    DELIVERED
  </Text>
</View>
`;

exports[`StatusBadge Snapshot Tests should match snapshot for in_transit status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#2E86DE",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#FFFFFF",
        },
        false,
      ]
    }
  >
    IN TRANSIT
  </Text>
</View>
`;

exports[`StatusBadge Snapshot Tests should match snapshot for large size 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#FDB813",
      },
      {
        "borderRadius": 8,
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#1a1a2e",
        },
        {
          "fontSize": 18,
          "letterSpacing": 1,
        },
      ]
    }
  >
    PENDING
  </Text>
</View>
`;

exports[`StatusBadge Snapshot Tests should match snapshot for pending status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#FDB813",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#1a1a2e",
        },
        false,
      ]
    }
  >
    PENDING
  </Text>
</View>
`;
